# preference_learning

./: .gitignore  README.md  project2.ipynb  pyproject.toml
MonoData/monodata/: journal_ranking.csv  mammographic.csv
